[gd_scene load_steps=6 format=2]

[ext_resource path="res://interface/theme/default.theme" type="Theme" id=1]
[ext_resource path="res://interface/shop/menus/ShopSubMenu.gd" type="Script" id=2]
[ext_resource path="res://interface/shop/panels/ShopItemsList.tscn" type="PackedScene" id=3]
[ext_resource path="res://interface/shop/panels/InfoPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://interface/shop/panels/DescriptionPanel.tscn" type="PackedScene" id=5]

[node name="ShopSubMenu" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 2 )
ACTION = "sell_to"

[node name="Row" type="HBoxContainer" parent="."]
margin_right = 1280.0
margin_bottom = 604.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ShopItemsList" parent="Row" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 864.0
margin_bottom = 604.0

[node name="InfoPanel" parent="Row" instance=ExtResource( 4 )]
margin_bottom = 604.0

[node name="DescriptionPanel" parent="." instance=ExtResource( 5 )]

[connection signal="focused_button_changed" from="Row/ShopItemsList" to="Row/InfoPanel" method="_on_ItemsList_focused_button_changed"]
[connection signal="item_amount_changed" from="Row/ShopItemsList" to="Row/InfoPanel" method="_on_ItemsList_item_amount_changed"]
